lbdb (0.31) unstable; urgency=low

  * m_pine: Double-quote parens. Thanks to Stefan Mätje for reporting this
    bug and sending a patch.
  * Apply patch by Brendan Cully to follow the Apple build system changes
    used to build ABQuery module.

 --

lbdb (0.30) unstable; urgency=low

  * Get rid of strict aliasing warnings in gcc.  Thanks to Ludwig Nussel
    <ludwig.nussel@suse.de> for providing a patch.
  * Add line breaks to POD part of mutt_ldap_query.pl to make man page
    more readable.
  * Replace "grep" with "grep -a" to avoid error messages on non-ascii
    output (Closes: #284119).
  * Search for evolution-addressbook-export in /usr/lib/evolution/2.0,
    where it is located in sarge and newer (Closes: #286795).
  * mutt_ldap_query: Stop returning entries without email address
    (Closes: #290148).
  * m_gpg: Add support for gpg 1.4 (not only 1.2.5) (Closes: #294113).
  * m_gpg: Stop showing revoked user ids (Closes: #259212).
  * Rebuild configure with autoconf 2.59a.
  * Make the paths of several binaries configurable in configure as
    --with-foo
  * Replace hyphens (-) by minus signs (\-) in the man pages.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 30 Apr 2005 21:40:04 +0200

lbdb (0.29) unstable; urgency=low

  * Add new module m_evolution to access Ximian Evolution addressbook.
    Thanks to Guido Guenther <agx@debian.org> (Closes: #234345).

 -- Roland Rosenfeld <roland@debian.org>  Mon, 23 Feb 2004 12:39:42 +0100

lbdb (0.28.2) unstable; urgency=low

  * Another upgrade of m_bbdb by Aaron Kaplan <kaplan@cs.rochester.edu>.
  * Add homepage URL to the package description.
  * Quote $GNUCLIENT in m_bbdb to avoid error message when this variable
    is not defined (Closes: #231061).
  * mutt_ldap_query: Apply patch from Max Kutny <mkut@umc.ua>, which
    allows to override config file settings via command line options
    (Closes: #231261).

 -- Roland Rosenfeld <roland@debian.org>  Sat,  7 Feb 2004 14:00:12 +0100
